use remote repositories

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,6 +24,12 @@ find-links =
 extensions =
     mr.developer
     buildout.dumppickedversions
+    
+auto-checkout =
+    adhocracy.plone
+    liqd.ypart_policy
+    liqd.ypart_theme
+    liqd.contenttypes
 
 sources = sources
 versions = versions
@@ -33,10 +39,6 @@ versions = versions
 # If you are using the mr.developer extension and have the source code in a
 # repository mr.developer will handle this automatically for you
 develop =
-    src/liqd.ypart_policy
-    src/liqd.ypart_theme
-    src/liqd.contenttypes
-    src/adhocracy.plone
 
 # Version pindowns for new style products go here - this section extends one provided in http://dist.plone.org/release/
 [versions]
@@ -89,7 +91,10 @@ eggs =
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
 [sources]
-collective.developermanual = svn http://svn.plone.org/svn/collective/collective.developermanual
+adhocracy.plone = git git@github.com:liqd/adhocracy.plone.git
+liqd.ypart_policy = git git@github.com:liqd/liqd.ypart_policy.git
+liqd.ypart_theme = git git@github.com:liqd/liqd.ypart_theme.git
+liqd.contenttypes = git git@github.com:liqd/liqd.contenttypes.git
 
 # compile varnish reverse proxy cache
 [varnish-build]
