--- a/buildout.cfg
+++ b/buildout.cfg
@@ -91,10 +91,10 @@ eggs =
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
 [sources]
-adhocracy.plone = git git@github.com:liqd/adhocracy.plone.git
-liqd.ypart_policy = git git@github.com:liqd/liqd.ypart_policy.git
-liqd.ypart_theme = git git@github.com:liqd/liqd.ypart_theme.git
-liqd.contenttypes = git git@github.com:liqd/liqd.contenttypes.git
+adhocracy.plone = git https://github.com/liqd/adhocracy.plone.git
+liqd.ypart_policy = git https://github.com/liqd/liqd.ypart_policy.git
+liqd.ypart_theme = git https://github.com/liqd/liqd.ypart_theme.git 
+liqd.contenttypes = git https://github.com/liqd/liqd.contenttypes.git
 
 # compile varnish reverse proxy cache
 [varnish-build]
