--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,8 +9,9 @@ parts =
     zopepy
     i18ndude
     test
-    varnish-build
-    varnish
+    omelette
+#   varnish-build
+#   varnish
 
 extends =
     http://dist.plone.org/release/4.3.2/versions.cfg
@@ -95,6 +96,11 @@ adhocracy.plone = git https://github.com/liqd/adhocracy.plone.git
 liqd.ypart_policy = git https://github.com/liqd/liqd.ypart_policy.git
 liqd.ypart_theme = git https://github.com/liqd/liqd.ypart_theme.git 
 liqd.contenttypes = git https://github.com/liqd/liqd.contenttypes.git
+
+# Create a unified directory structure of installed packages
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${instance:eggs}
 
 # compile varnish reverse proxy cache
 [varnish-build]
