add global test runner

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -86,7 +86,8 @@ eggs = i18ndude
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress']
 eggs =
-    ${instance:eggs}
+    adhocracy.plone[test]
+    liqd.ypart_policy[test]
 
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
