always checkout code

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,7 +25,7 @@ find-links =
 extensions =
     mr.developer
     buildout.dumppickedversions
-    
+always-checkout = True    
 auto-checkout =
     adhocracy.plone
     liqd.ypart_policy
