add supervisor for plone and varnish

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,6 +12,7 @@ parts =
     omelette
 #   varnish-build
 #   varnish
+    supervisor
 
 extends =
     http://dist.plone.org/release/4.3.2/versions.cfg
@@ -119,3 +120,9 @@ bind = 127.0.0.1:8000
 backends = 127.0.0.1:8080
 cache-size = 256M
 
+
+[supervisor]
+recipe = collective.recipe.supervisor
+programs =
+    10 plone (redirect_stderr=true stdout_logfile=var/log/plone.log stderr_logfile=NONE) ${buildout:bin-directory}/instance fg
+    20 varnish (redirect_stderr=true stdout_logfile=var/log/varnish.log stderr_logfile=NONE) ${buildout:bin-directory}/varnish_bin
