--- a/buildout.cfg
+++ b/buildout.cfg
@@ -124,5 +124,5 @@ cache-size = 256M
 [supervisor]
 recipe = collective.recipe.supervisor
 programs =
-    10 plone (redirect_stderr=true stdout_logfile=var/log/plone.log stderr_logfile=NONE) ${buildout:bin-directory}/instance fg
-    20 varnish (redirect_stderr=true stdout_logfile=var/log/varnish.log stderr_logfile=NONE) ${buildout:bin-directory}/varnish_bin
+    10 plone (redirect_stderr=true stdout_logfile=var/log/plone.log stderr_logfile=NONE) ${buildout:bin-directory}/instance [fg]
+    20 varnish (redirect_stderr=true stdout_logfile=var/log/varnish.log stderr_logfile=NONE) ${buildout:bin-directory}/varnish
