--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,8 +10,8 @@ parts =
     i18ndude
     test
     omelette
-#   varnish-build
-#   varnish
+    varnish-build
+    varnish
     supervisor
 
 extends =
