extenden varnish config

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -119,6 +119,15 @@ mode = foreground
 bind = 0.0.0.0:8000
 backends = 127.0.0.1:8080
 cache-size = 256M
+vcl_recv = 
+    if (req.url == "/PURGE_ALL" && req.request == "PURGE") {
+        if (!client.ip ~ purge) {
+            error 405 "Not allowed.";
+        }
+        ban("req.url ~ /");
+        error 200 "Cached Cleared Successfully.";
+    }
+
 
 
 [supervisor]
