don't use github repositories

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,6 +13,7 @@ parts =
     varnish-build
     varnish
     supervisor
+    templer
 
 extends =
     http://dist.plone.org/release/4.3.2/versions.cfg
@@ -26,13 +27,8 @@ find-links =
 extensions =
     mr.developer
     buildout.dumppickedversions
-always-checkout = True    
-auto-checkout =
-    adhocracy.plone
-    liqd.ypart_policy
-    liqd.ypart_theme
-    liqd.contenttypes
-
+always-checkout = force
+auto-checkout = *
 sources = sources
 versions = versions
 
@@ -66,6 +62,7 @@ environment-vars =
 eggs =
 	Plone
     liqd.ypart_policy
+    liqd.senat_policy
 zcml =
     liqd.ypart_policy
 
@@ -89,15 +86,36 @@ recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress']
 eggs =
     adhocracy.plone[test]
+    liqd.contenttypes[test]
+    liqd.policy[test]
     liqd.ypart_policy[test]
+    liqd.ypart_theme[test]
+    liqd.senat_policy[test]
+    liqd.senat_dummy_theme[test]
 
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
 [sources]
-adhocracy.plone = git https://github.com/liqd/adhocracy.plone.git
-liqd.ypart_policy = git https://github.com/liqd/liqd.ypart_policy.git
-liqd.ypart_theme = git https://github.com/liqd/liqd.ypart_theme.git 
-liqd.contenttypes = git https://github.com/liqd/liqd.contenttypes.git
+adhocracy.plone = git ssh://git@foucault.liqd.net:22012/adhocracy.plone.git
+liqd.ypart_policy = git ssh://git@foucault.liqd.net:22012/liqd.ypart_policy.git
+liqd.ypart_theme = git ssh://git@foucault.liqd.net:22012/liqd.ypart_theme.git 
+liqd.contenttypes = git ssh://git@foucault.liqd.net:22012/liqd.contenttypes.git
+liqd.policy = git ssh://git@foucault.liqd.net:22012/liqd.policy.git
+liqd.senat_policy = git ssh://git@foucault.liqd.net:22012/liqd.senat_policy.git
+liqd.senat_dummy_theme = git ssh://git@foucault.liqd.net:22012/liqd.senat_dummy_theme.git
+templer.plone = git https://github.com/collective/templer.plone.git
+templer.localcommands = git https://github.com/collective/templer.localcommands.git
+templer.plone.localcommands = git https://github.com/collective/templer.plone.localcommands.git
+templer.buildout = git https://github.com/collective/templer.buildout.git
+templer.core = git https://github.com/collective/templer.core.git
+templer.zope = git https://github.com/collective/templer.zope.git
+
+# Create bin/templer to generate python package skeletons 
+[templer]
+recipe = zc.recipe.egg
+eggs = templer.plone[localcommands]
+dependent-scripts = true
+scripts= templer
 
 # Create a unified directory structure of installed packages
 [omelette]
@@ -134,4 +152,4 @@ vcl_recv =
 recipe = collective.recipe.supervisor
 programs =
     10 plone (redirect_stderr=true stdout_logfile=var/log/plone.log stderr_logfile=NONE) ${buildout:directory}/bin/instance [console] ${buildout:directory} true
-    20 varnish (redirect_stderr=true stdout_logfile=var/log/varnish.log stderr_logfile=NONE) ${buildout:bin-directory}/varnish
+   20 varnish (redirect_stderr=true stdout_logfile=var/log/varnish.log stderr_logfile=NONE) ${buildout:bin-directory}/varnish
