split buildout in buildout.cfg and development.cfg

--- a/development.cfg
+++ b/development.cfg
@@ -1,9 +1,44 @@
 [buildout]
 extends = buildout.cfg
+parts +=
+   i18ndude
+   test
+   templer
 
 [sources]
-adhocracy.plone = git git@github.com:liqd/adhocracy.plone.git
-liqd.ypart_policy = git git@github.com:liqd/liqd.ypart_policy.git
-liqd.ypart_theme = git git@github.com:liqd/liqd.ypart_theme.git
-liqd.contenttypes = git git@github.com:liqd/liqd.contenttypes.git
+templer.plone = git https://github.com/collective/templer.plone.git
+templer.localcommands = git https://github.com/collective/templer.localcommands.git
+templer.plone.localcommands = git https://github.com/collective/templer.plone.localcommands.git
+templer.buildout = git https://github.com/collective/templer.buildout.git
+templer.core = git https://github.com/collective/templer.core.git
+templer.zope = git https://github.com/collective/templer.zope.git
 
+[instance]
+debug-mode = on
+verbose-security = on
+
+# create bin/i18ndude command
+[i18ndude]
+unzip = true
+recipe = zc.recipe.egg
+eggs = i18ndude
+
+# create bin/test command
+[test]
+recipe = zc.recipe.testrunner
+defaults = ['--auto-color', '--auto-progress']
+eggs =
+    adhocracy.plone[test]
+    liqd.contenttypes[test]
+    liqd.policy[test]
+    liqd.ypart_policy[test]
+    liqd.ypart_theme[test]
+    liqd.senat_policy[test]
+    liqd.senat_dummy_theme[test]
+
+# Create bin/templer to generate python package skeletons
+[templer]
+recipe = zc.recipe.egg
+eggs = templer.plone[localcommands]
+dependent-scripts = true
+scripts= templer
