--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,13 +7,10 @@
 parts =
     instance
     zopepy
-    i18ndude
-    test
     omelette
     varnish-build
     varnish
     supervisor
-    templer
 
 extends =
     http://dist.plone.org/release/4.3.2/versions.cfg
@@ -56,6 +53,7 @@ http-address = 8080
 debug-mode = off
 verbose-security = on
 blob-storage = var/blobstorage
+locales = ${buildout:directory}/locales
 environment-vars =
     PTS_LANGUAGES en de
     zope_i18n_compile_mo_files true
@@ -74,25 +72,6 @@ eggs = ${instance:eggs}
 interpreter = zopepy
 scripts = zopepy
 
-# create bin/i18ndude command
-[i18ndude]
-unzip = true
-recipe = zc.recipe.egg
-eggs = i18ndude
-
-# create bin/test command
-[test]
-recipe = zc.recipe.testrunner
-defaults = ['--auto-color', '--auto-progress']
-eggs =
-    adhocracy.plone[test]
-    liqd.contenttypes[test]
-    liqd.policy[test]
-    liqd.ypart_policy[test]
-    liqd.ypart_theme[test]
-    liqd.senat_policy[test]
-    liqd.senat_dummy_theme[test]
-
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
 [sources]
@@ -103,20 +82,6 @@ liqd.contenttypes = git ssh://git@foucault.liqd.net:22012/liqd.contenttypes.git
 liqd.policy = git ssh://git@foucault.liqd.net:22012/liqd.policy.git
 liqd.senat_policy = git ssh://git@foucault.liqd.net:22012/liqd.senat_policy.git
 liqd.senat_dummy_theme = git ssh://git@foucault.liqd.net:22012/liqd.senat_dummy_theme.git
-templer.plone = git https://github.com/collective/templer.plone.git
-templer.localcommands = git https://github.com/collective/templer.localcommands.git
-templer.plone.localcommands = git https://github.com/collective/templer.plone.localcommands.git
-templer.buildout = git https://github.com/collective/templer.buildout.git
-templer.core = git https://github.com/collective/templer.core.git
-templer.zope = git https://github.com/collective/templer.zope.git
-
-# Create bin/templer to generate python package skeletons 
-[templer]
-recipe = zc.recipe.egg
-eggs = templer.plone[localcommands]
-dependent-scripts = true
-scripts= templer
-
 # Create a unified directory structure of installed packages
 [omelette]
 recipe = collective.recipe.omelette
